added Dashboard and modified UI for Admin User Management

--- a/WebApp/WebApp.csproj
+++ b/WebApp/WebApp.csproj
@@ -12,6 +12,11 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Content Remove="wwwroot\js\chart.cs" />
+    <Content Remove="wwwroot\js\chart.js" />
+  </ItemGroup>
+
+  <ItemGroup>
     <None Remove="appsettings.json.rej" />
   </ItemGroup>
 
