--- a/Services/Services.csproj
+++ b/Services/Services.csproj
@@ -10,6 +10,7 @@
     <PackageReference Include="EFCore.BulkExtensions" Version="8.1.1" />
     <PackageReference Include="Hangfire.Core" Version="1.8.14" />
     <PackageReference Include="LinqKit" Version="1.3.0" />
+    <PackageReference Include="MailKit" Version="4.8.0" />
     <PackageReference Include="Microsoft.AspNetCore.Localization" Version="2.2.0" />
     <PackageReference Include="Microsoft.Extensions.Configuration.Binder" Version="8.0.2" />
     <PackageReference Include="Microsoft.Extensions.Http" Version="8.0.0" />
