--- a/Services/Services.csproj
+++ b/Services/Services.csproj
@@ -11,10 +11,14 @@
     <PackageReference Include="Hangfire.Core" Version="1.8.14" />
     <PackageReference Include="LinqKit" Version="1.3.0" />
     <PackageReference Include="MailKit" Version="4.8.0" />
+    <PackageReference Include="MathNet.Numerics" Version="5.0.0" />
     <PackageReference Include="Microsoft.AspNetCore.Localization" Version="2.2.0" />
     <PackageReference Include="Microsoft.Extensions.Configuration.Binder" Version="8.0.2" />
     <PackageReference Include="Microsoft.Extensions.Hosting" Version="8.0.1" />
     <PackageReference Include="Microsoft.Extensions.Http" Version="8.0.0" />
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
+    <PackageReference Include="OpenAI" Version="2.0.0" />
+    <PackageReference Include="PdfPig" Version="0.1.9" />
     <PackageReference Include="Polly" Version="8.4.2" />
     <PackageReference Include="Quartz" Version="3.13.0" />
   </ItemGroup>
