--- a/WebApp/package.json
+++ b/WebApp/package.json
@@ -12,6 +12,9 @@
   "devDependencies": {
     "autoprefixer": "^10.4.20",
     "postcss": "^8.4.47",
-    "tailwindcss": "^3.4.13"
+    "tailwindcss": "^3.4.14"
+  },
+  "dependencies": {
+    "@yaireo/tagify": "^4.31.3"
   }
 }
