--- a/WebApp/WebApp.csproj
+++ b/WebApp/WebApp.csproj
@@ -8,7 +8,12 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="wwwroot\lib\signalr\src\**" />
+    <Content Remove="wwwroot\lib\signalr\src\**" />
+    <EmbeddedResource Remove="wwwroot\lib\signalr\src\**" />
+    <None Remove="wwwroot\lib\signalr\src\**" />
     <TypeScriptCompile Remove="node_modules\**" />
+    <TypeScriptCompile Remove="wwwroot\lib\signalr\src\**" />
   </ItemGroup>
 
   <ItemGroup>
@@ -35,6 +40,7 @@
     <PackageReference Include="LinqKit" Version="1.3.0" />
     <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="8.0.8" />
     <PackageReference Include="Microsoft.AspNetCore.Mvc.Razor.RuntimeCompilation" Version="8.0.8" />
+    <PackageReference Include="Microsoft.AspNetCore.SignalR.Common" Version="8.0.10" />
     <PackageReference Include="Microsoft.Extensions.Configuration.Binder" Version="8.0.2" />
     <PackageReference Include="Microsoft.TypeScript.MSBuild" Version="5.6.2">
       <PrivateAssets>all</PrivateAssets>
