--- a/WebApp/package.json
+++ b/WebApp/package.json
@@ -15,6 +15,7 @@
     "tailwindcss": "^3.4.14"
   },
   "dependencies": {
+    "@microsoft/signalr": "^8.0.7",
     "@yaireo/tagify": "^4.31.3"
   }
 }
