--- a/Services/Services.csproj
+++ b/Services/Services.csproj
@@ -9,6 +9,7 @@
     <PackageReference Include="BCrypt.Net-Next" Version="4.0.3" />
     <PackageReference Include="EFCore.BulkExtensions" Version="8.1.1" />
     <PackageReference Include="Hangfire.Core" Version="1.8.14" />
+    <PackageReference Include="itext7" Version="8.0.5" />
     <PackageReference Include="LinqKit" Version="1.3.0" />
     <PackageReference Include="MailKit" Version="4.8.0" />
     <PackageReference Include="MathNet.Numerics" Version="5.0.0" />
