added Application Modals

--- a/WebApp/WebApp.csproj
+++ b/WebApp/WebApp.csproj
@@ -16,6 +16,14 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Content Remove="Views\Application\_ApplicationTableBody.cshtml" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Compile Include="Views\Application\_ApplicationTableBody.cshtml" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="AutoMapper" Version="13.0.1" />
     <PackageReference Include="BCrypt.Net-Next" Version="4.0.3" />
     <PackageReference Include="Humanizer" Version="2.14.1" />
