--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -2,7 +2,7 @@ name: Build and Deploy to IIS
 
 on:
   push:
-    branches: [Gemaldita-Core]
+    branches: [main]
 
 jobs:
   build-and-deploy:
@@ -26,7 +26,6 @@ jobs:
       - name: Publish
         run: dotnet publish --configuration Release --output ./publish
 
-      # Copy published files to the IIS site folder
       - name: Deploy to IIS folder
         shell: powershell
         run: |
@@ -37,6 +36,5 @@ jobs:
               exit $LASTEXITCODE
             }
 
-      # Restart IIS to ensure changes take effect
       - name: Restart IIS
         run: iisreset
