--- a/WebApp/WebApp.csproj
+++ b/WebApp/WebApp.csproj
@@ -48,4 +48,8 @@
     <ProjectReference Include="..\Resources\Resources.csproj" />
     <ProjectReference Include="..\Services\Services.csproj" />
   </ItemGroup>
+
+	<ItemGroup>
+		<Content Update="appsettings.json" CopyToPublishDirectory="Always" />
+	</ItemGroup>
 </Project>
